# translator-agent-framework

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  requirements-indictrans.txt  requirements.txt  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
agents/: __init__.py  detector.py  pipeline.py  reviewer.py  router.py  translator.py
backend/: deps.py  main.py
backend/routes/: languages.py  translate.py
config/: routing.yaml
framework/: __init__.py  agent.py  context.py  llm.py  orchestrator.py  tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: LanguagePicker.tsx  ResultCard.tsx  TranslatorCard.tsx
tests/: conftest.py  test_pipeline.py  test_router.py
